-support sdk 2.0 - add smart config sample - add wps sample - add led sample - add key sample - correct Makefile

--- a/user/Makefile
+++ b/user/Makefile
@@ -39,6 +39,7 @@ endif
 
 INCLUDES := $(INCLUDES) -I $(PDIR)include
 INCLUDES += -I ./
+INCLUDES += -I ../../include/ets
 PDIR := ../$(PDIR)
 sinclude $(PDIR)Makefile
 
